[project]
name = "whatsapp-automation"
version = "0.1.0"
description = "Selenium-based tool to automate WhatsApp Web for learning purposes"
authors = [
  { name="happy-frost" }
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
  "selenium>=4.0.0"
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"